# fastmcp

./: .ccignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONCISE_COMMIT_MSG.tmp  README.md  README_OPENAPI.md  justfile  pyproject.toml  server.py  test.fastmcp.json  test_github_oauth.py  test_google_oauth.py  test_pr_creation.md  test_pr_demo.py  test_revert_check.py
.claude/commands/: dedupe.md
.cursor/rules/: debug.mdc  mre.mdc
.github/: dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: auto-close-duplicates.yml  claude-dedupe-issues.yml  labeler.yml  marvin-dedupe-issues.yml  marvin-label-triage.yml  marvin.yml  publish.yml  run-static.yml  run-tests.yml  update-config-schema.yml  update-sdk-docs.yml
docs/: .ccignore  browser-integration.md  changelog.mdx  docs.json  style.css  updates.mdx
docs/clients/: client.mdx  elicitation.mdx  logging.mdx  messages.mdx  progress.mdx  prompts.mdx  resources.mdx  roots.mdx  sampling.mdx  tools.mdx  transports.mdx
docs/community/: README.md  showcase.mdx
docs/css/: banner.css  python-sdk.css  style.css  version-badge.css
docs/deployment/: asgi.mdx  cli.mdx  fastmcp-cloud.mdx  running-server.mdx  self-hosted.mdx  server-configuration.mdx  testing.mdx
docs/getting-started/: installation.mdx  quickstart.mdx  welcome.mdx
docs/integrations/: anthropic.mdx  asgi.mdx  authkit.mdx  azure.mdx  chatgpt.mdx  claude-code.mdx  claude-desktop.mdx  cursor.mdx  eunomia-authorization.mdx  fastapi.mdx  gemini.mdx  github.mdx  google.mdx  mcp-json-configuration.mdx  openai.mdx  openapi.mdx  permit.mdx  starlette.mdx  workos-oauth.mdx
docs/patterns/: cli.mdx  contrib.mdx  decorating-methods.mdx  fastapi.mdx  http-requests.mdx  openapi.mdx  testing.mdx  tool-transformation.mdx
docs/python-sdk/: fastmcp-cli-__init__.mdx  fastmcp-cli-claude.mdx  fastmcp-cli-cli.mdx  fastmcp-cli-install-__init__.mdx  fastmcp-cli-install-claude_code.mdx  fastmcp-cli-install-claude_desktop.mdx  fastmcp-cli-install-cursor.mdx  fastmcp-cli-install-mcp_config.mdx  fastmcp-cli-install-mcp_json.mdx  fastmcp-cli-install-shared.mdx  fastmcp-cli-run.mdx  fastmcp-client-__init__.mdx  fastmcp-client-auth-__init__.mdx  fastmcp-client-auth-bearer.mdx  fastmcp-client-auth-oauth.mdx  fastmcp-client-client.mdx  fastmcp-client-elicitation.mdx  fastmcp-client-logging.mdx  fastmcp-client-messages.mdx  fastmcp-client-oauth_callback.mdx  fastmcp-client-progress.mdx  fastmcp-client-roots.mdx  fastmcp-client-sampling.mdx  fastmcp-client-transports.mdx  fastmcp-exceptions.mdx  (+66 more)
examples/: browser_mcp_server.py  browser_pyscript_demo.html  chat_with_server.py  complex_inputs.py  config_server.py  desktop.py  get_file.py  memory.fastmcp.json  memory.py  mount_example.fastmcp.json  mount_example.py  pyscript_browser_demo.html  pyscript_integration_guide.md  sampling.py  sampling_fallback.py  screenshot.fastmcp.json  screenshot.py  serializer.py  simple_browser_demo.html  simple_echo.py  tags_example.py  test_browser_demo.py
examples/atproto_mcp/: README.md  demo.py  fastmcp.json  pyproject.toml
examples/atproto_mcp/src/atproto_mcp/: _atproto.py  server.py  settings.py  types.py
examples/atproto_mcp/src/atproto_mcp/_atproto/: __init__.py  _client.py  _posts.py
mre/: demo_server.py  demo_v1_server.py
scripts/: auto_close_duplicates.py
tests/: conftest.py  test_browser_integration.py  test_examples.py  test_mcp_config.py
(+339 files in other folders)
